Test if swiper CSS fix cutting of swiper items and scrolling issue on mobile

--- a/content/style.css
+++ b/content/style.css
@@ -2909,11 +2909,13 @@ body.dark-theme .btn-link-underline-hover {
 .swiper-wrapper {
 	display: flex;
 	overflow-x: hidden !important;
+	max-width: 100vw;
+	width: auto !important;
 }
 
 .swiper-slide,
 .portfolio-item {
-	width: 100%
+	max-width: 100%;
 }
 
 .portfolio-item-img {
